# GPTTG

./: .env.example  .gitignore  AUTOUPDATE_SIMPLIFIED.md  AUTOUPDATE_TROUBLESHOOTING.md  Bot_2.pyproj  Bot_2.sln  LICENSE  README.md  dev-setup.ps1  dev-setup.sh  gpttg-bot.service  pyproject.toml  pyproject.toml.txt  requirements.txt  schema.sql  tree.txt  update_bot.sh
bot/: __init__.py  config.py  keyboards.py  main.py  middlewares.py
bot/deploy/: install.sh
bot/deploy/systemd/: gpttg-update.service  gpttg-update.timer
bot/handlers/: __init__.py  admin_update.py  commands.py  document.py  message_handler.py  photo.py  text.py  voice.py
bot/utils/: __init__.py  datetime_context.py  db.py  errors.py  html.py  http_client.py  log.py  markdown.py  openai_client.py  progress.py  prompts.py  reminders.py  single_instance.py  updater.py  version_checker.py
bot/utils/openai/: __init__.py  base.py  chat.py  dalle.py  files.py  models.py  whisper.py
