[tool.poetry]
name = "gpttg"
version = "1.2.5"
description = "Telegram-бот на OpenAI Responses API с мультимодальностью, учётом расходов и пошаговой генерацией изображений"
authors = ["zergont <Folist@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zergont/GPTTG"
packages = [{ include = "bot" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiogram = "^3.21.0"
aiohttp = "^3.12.13"
aiosqlite = "^0.21.0"
openai = "^1.93.2"
python-dotenv = "^1.1.1"
backoff = "^2.2.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"