[tool.poetry]
name = "gpttg"
version = "1.4.5"
description = "Кроссплатформенный Telegram-бот на OpenAI Responses API с мультимодальностью, учётом расходов и пошаговой генерацией изображений"
authors = ["zergont <Folist@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zergont/GPTTG"
packages = [{ include = "bot" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aiogram = "^3.21.0"
aiohttp = "^3.12.13"
aiosqlite = "^0.21.0"
openai = "^1.93.2"
python-dotenv = "^1.1.1"
backoff = "^2.2.1"
toml = "^0.10.2"
aiocron = "^1.8"

[tool.poetry.scripts]
gpttg-dev = "bot.main:run_bot"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"